--- a/css/admin.css
+++ b/css/admin.css
@@ -11,5 +11,11 @@
 }
 
 form p {
-    margin:30px 70px 5px 0px ;
+    margin:30px 270px 5px 0px ;
+}
+
+form input {
+    width:80px;
+    height:40px;
+    margin:0px 20px;
 }
