--- a/css/index.css
+++ b/css/index.css
@@ -3,12 +3,16 @@
     margin-top:6vh;
     background-image:url(/LMS/image/sample.jpg);
     height: 62vh;
-    position:relative;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
 }
 
 .main-container h1, .main-container h2 {
     animation-name: catchphraseopen;
     animation-duration:2.5s;
+    text-align: center;
+    
 }
 
 @keyframes catchphraseopen {
@@ -17,20 +21,14 @@
 }
 
 .main-container h1 {
-    margin: 0;
     color: white;
-    position:absolute;
-    top:20vh;
-    left:38%;
+    margin:0;
 }
 
 .main-container h2 {
-    margin: 0;
+    margin:2vh 0 10vh 0;
     text-align: center;
     color: white;
-    position:absolute;
-    top:30vh;
-    left:41%;
 }
 
 
